--- a/_site.yml
+++ b/_site.yml
@@ -1,10 +1,27 @@
-name: "My new website"
-output_dir: 'docs'
-output:
-  html_document:
-    theme: cerulean
-    highlight: zenburn
-    toc: true
-    toc_depth: 2
-    toc_float:
-      collapsed: false
+# name: "Peter Xue"
+# output_dir: 'docs'
+# output:
+#   html_document:
+#     theme: theme.css
+#     highlight: zenburn
+#     toc: true
+#     toc_depth: 2
+#     toc_float:
+#       collapsed: false
+
+
+name: "mywebsite"
+title: "My Website"
+theme: theme.css
+description: |
+  My Website
+output_dir: "docs"
+navbar:
+  right:
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
+    - text: "About Me"
+      href: aboutme.html
+output: distill::distill_article
