--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,6 @@
 name: "peterrlx.github.io"
 title: "Peter Xue"
+theme: theme.css
 description: |
   Peter Xue
 output_dir: "docs"
@@ -7,6 +8,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
+    - text: "Research"
+      href: research.html
     - text: "About"
       href: about.html
 output: distill::distill_article
