--- a/_site.yml
+++ b/_site.yml
@@ -8,8 +8,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Research"
-      href: research.html
+    # - text: "Research"
+    #   href: research.html
     - text: "About"
       href: about.html
 output: distill::distill_article
