--- a/_site.yml
+++ b/_site.yml
@@ -13,5 +13,5 @@ navbar:
     - text: "About"
       href: about.html
 output: distill::distill_article
-include:
+includes:
       in_header: google.html
